[gd_scene load_steps=2 format=3 uid="uid://ddfh5sjavcqlt"]

[ext_resource type="Script" uid="uid://2uog3jvf77s" path="res://Scenes/game_flow_manager/game_flow_manager.gd" id="1_n4jq7"]

[node name="GameFlowManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4jq7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="CombineButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Combine"

[node name="FightButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fight"

[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CombineButton" to="." method="_on_CombineButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FightButton" to="." method="_on_FightButton_pressed"]
